--- a/index.html
+++ b/index.html
@@ -454,6 +454,6 @@
   
 
   <!-- Javascrypt na kalokohan  -->
-  <script src="funtion.js" type="text/JavaScript"></script>
+  <script src="funtion.js" type="text/javascript"></script>
 </body>
 </html>
